@@ -5,6 +5,8 @@ CHANGES
 1.0a1
 -----
 
-- Initial import from the stdlib
-
+- Initial import from the stdlib [tarek]
+- Added support for PEP 376 in distutils2.version [tarek]
+- Added support for PEP 345 in distutils2.metadata [tarek]
+- Added distutils2.util.find_package [tarek]
 
